Issue #1019: Revert "Issue #451: add AbbreviationAsWordInName to checkstyle config"
This reverts commit 7c9f27837c8c82525011456581086c93ebf49f1f.