@@ -45,8 +45,7 @@ public class CheckstyleTransformer {
   /**
    * The list with all TransformationClass-instances loaded in method loadTransformationClasses().
    */
-  private final List<AbstractCheckstyleTransformationClass> mTransformationClasses =
-          new ArrayList<>();
+  private final List<AbstractCTransformationClass> mTransformationClasses = new ArrayList<>();
 
   private IProject mProject;
 
@@ -98,9 +97,8 @@ public class CheckstyleTransformer {
       try {
         transformationClass = CheckstylePlugin.getDefault().getAddonExtensionClassLoader()
                 .loadClass(name);
-        final AbstractCheckstyleTransformationClass transObj =
-                (AbstractCheckstyleTransformationClass) transformationClass.getDeclaredConstructor()
-                .newInstance();
+        final AbstractCTransformationClass transObj = (AbstractCTransformationClass)
+                transformationClass.getDeclaredConstructor().newInstance();
         transObj.setRule(rule);
         mTransformationClasses.add(transObj);
         // Logger.writeln("using " + name + " to transform rule \""
@@ -129,7 +127,7 @@ public class CheckstyleTransformer {
    */
   private void loadRuleConfigurations() {
     FormatterConfiguration settings;
-    final Iterator<AbstractCheckstyleTransformationClass> it = mTransformationClasses.iterator();
+    final Iterator<AbstractCTransformationClass> it = mTransformationClasses.iterator();
     while (it.hasNext()) {
       settings = it.next().transformRule();
       mFormatterSetting.addConfiguration(settings);
